--- a/app/assets/stylesheets/offers.css
+++ b/app/assets/stylesheets/offers.css
@@ -16,6 +16,7 @@
 	display: inline-block;
 }
 
+
 #grid {
     padding: 5px 0 50px 0;
     width: 100%; 
@@ -297,6 +298,11 @@
 
 @media handheld, only screen and (max-width: 800px), only screen and (max-device-width: 800px)  {
 	.modal > div {padding: 0; width: 100%; height: 100%; overflow: scroll;}
+	.modal .header .percent_label {left: 10px;}
+	.modal .body li {padding: 5px 0 5px 0;}
+
+	#grid {min-width: 100%;}
+
 }
 
 .ten, .fifteen { background-color: #FBC325; height:30px;}
